--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "server": "nodemon server/index.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,22 +12,35 @@
     "@nextui-org/react": "^2.1.10",
     "@nextui-org/use-infinite-scroll": "^2.1.1",
     "@react-stately/data": "^3.10.3",
+    "@thirdweb-dev/react": "^4.3.2",
+    "@thirdweb-dev/sdk": "^4.0.27",
+    "@uniswap/widgets": "^2.59.0",
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
+    "cookies": "^0.8.0",
+    "cookies-next": "^2.1.1",
     "cors": "^2.8.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "ethers": "^5.7.2",
     "express-session": "^1.17.3",
+    "mongodb": "^5.2.0",
+    "mongoose": "^8.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
     "next": "13.4.19",
     "next-auth": "^4.24.5",
+    "next-session": "^4.0.5",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
-    "react-scrollbars-custom": "^4.1.1"
+    "react-hook-form": "^7.43.9",
+    "react-redux": "^8.1.3",
+    "react-scrollbars-custom": "^4.1.1",
+    "universal-cookie": "^7.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
