--- a/package.json
+++ b/package.json
@@ -6,44 +6,52 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    
     "@nextui-org/react": "^2.1.10",
     "@nextui-org/use-infinite-scroll": "^2.1.1",
     "@react-stately/data": "^3.10.3",
-    "@thirdweb-dev/react": "^4.3.2",
-    "@thirdweb-dev/sdk": "^4.0.27",
+    
     "@uniswap/widgets": "^2.59.0",
-    "axios": "^1.6.1",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cookies": "^0.8.0",
     "cookies-next": "^2.1.1",
     "cors": "^2.8.5",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.2.4",
     "ethers": "^5.7.2",
     "express-session": "^1.17.3",
+    "gravatar": "^1.8.2",
     "mongodb": "^5.2.0",
     "mongoose": "^8.0.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.6.3",
-    "next": "13.4.19",
+    
+    "next": "^14.2.4",
     "next-auth": "^4.24.5",
     "next-session": "^4.0.5",
+    "nftscan-api": "^1.13.1",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.1.3",
     "react-scrollbars-custom": "^4.1.1",
+    "react-tradingview-widget": "^1.3.2",
+    "react-ts-tradingview-widgets": "^1.2.3",
+    "swr": "^2.2.5",
     "universal-cookie": "^7.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "autoprefixer": "^10.4.16",
+    "jest": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   }
